; ModuleID = '/home/carl/AnghaBench/libgit2/tests/pack/extr_packbuilder.c_test_pack_packbuilder__foreach.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/pack/extr_packbuilder.c_test_pack_packbuilder__foreach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c".\00", align 1
@_packbuilder = common dso_local global i32 0, align 4
@foreach_cb = common dso_local global i32 0, align 4
@_stats = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_pack_packbuilder__foreach() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 (...) @seed_packbuilder()
  %3 = call i32 @git_indexer_new(i32** %1, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 0, i32* null, i32* null)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @_packbuilder, align 4
  %6 = load i32, i32* @foreach_cb, align 4
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_packbuilder_foreach(i32 %5, i32 %6, i32* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_indexer_commit(i32* %10, i32* @_stats)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @git_indexer_free(i32* %13)
  ret void
}

declare dso_local i32 @seed_packbuilder(...) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_indexer_new(i32**, i8*, i32, i32*, i32*) #1

declare dso_local i32 @git_packbuilder_foreach(i32, i32, i32*) #1

declare dso_local i32 @git_indexer_commit(i32*, i32*) #1

declare dso_local i32 @git_indexer_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
